// Vitest Snapshot v1

exports[`fromQuery > should create record from query 1`] = `
{
  "field1": StringFieldValue {
    "props": {
      "value": "hello",
    },
  },
}
`;

exports[`fromQuery > should create record from query 2`] = `
{
  "field1": SelectFieldValue {
    "props": {
      "value": "opt1",
    },
  },
}
`;

exports[`fromQuery > should create record from query 3`] = `
{
  "field1": StringFieldValue {
    "props": {
      "value": "hello",
    },
  },
  "field2": SelectFieldValue {
    "props": {
      "value": "opt1",
    },
  },
}
`;

exports[`should create record 1`] = `
ResultType {
  Symbol(Val): Record {
    "autoIncrement": undefined,
    "createdAt": DateVO {
      "props": {
        "value": 2022-02-01T00:00:00.000Z,
      },
    },
    "id": RecordId {
      "props": {
        "value": "record",
      },
    },
    "tableId": TableId {
      "props": {
        "value": "table",
      },
    },
    "updatedAt": DateVO {
      "props": {
        "value": 2022-02-01T00:00:00.000Z,
      },
    },
    "values": RecordValues {
      "props": Map {},
    },
  },
  Symbol(T): true,
}
`;
